<resources>
    <string name="app_name">UCLan Cyprus App</string>

    <string name="uclan_cyprus_url">http://www.uclancyprus.ac.cy</string>
    <string name="google_maps_key">11111</string>
    <string name="News">News</string>
    <string name="Gallery">Gallery</string>
    <string name="Contact">Contact Us</string>

    <string name="Students">Students</string>

    <string name="Room_timetable">Room timetable</string>

    <string name="Students_and_staff">Students and staff</string>
    <string name="Personal_timetable">Timetable</string>

    <string name="Staff">Staff</string>
    <string name="Student_attendance">Student attendance</string>

    <string name="App">App</string>
    <string name="About">About</string>
    <string name="Navigate">Navigate</string>
    <string name="Km">Km</string>
    <string name="uclancy_address">12–14 University Avenue, Pyla CY-7080</string>
    <string name="uclancy_driving_instructions">On the A3 highway towards Paralimni, take Exit 59 or Exit 60</string>

    <string name="Not_available_yet">Not available yet</string>

    <string name="Scan">Scan</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Nothing_selected">Nothing selected</string>
    <string name="Fetching_timetable">Fetching timetable …</string>
    <string name="Data_fetched">Data_fetched</string>
    <string name="session_type_with_lecturer">%1$s with %2$s</string>
    <string name="Error_for">Error: %1$s</string>
    <string name="Showing_data_for">Showing data for %1$s</string>
    <string name="Select_a_room_or_scan_a_barcode">Select a room or scan a barcode or touch to NFC</string>
    <string name="No_sessions_found_for_this_room_today">No sessions found for this room today</string>

    <string name="Socialize">Socialize</string>
    <string name="Share">Share</string>
    <string name="Call">Call</string>
    <string name="Email">Email</string>
    <string name="Map">Map</string>

    <string name="Unknown_room">Unknown room: %1$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_map">UCLan Cyprus Map</string>

    <string name="Install">Install UCLan Cyprus App for Android!</string>
    <string name="Version">Version</string>
    <string name="DevelopedBy">Developed by</string>
    <string name="inspire_url" translatable="false">http://inspirecenter.org</string>
    <string name="Tell_the_world">Tell the world</string>
    <string name="Share_with_your_friends">Share with your friends</string>
    <string name="Personal_upcoming_exams">Upcoming Exams</string>
    <string name="Personal_timetable_notifications">Notifications</string>

    <!--Date Spinner Values-->
    <string-array name="dates_array">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Pick Date</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lerom_ipsum">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget,
        arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
    </string>
    <string name="read_more">Read more</string>
    <string name="Login">Login</string>
    <string name="uclan_mail_suffix">\@uclan.ac.uk</string>
    <string name="log_in_with_google">log in with Google+</string>
    <string name="activity_after_login">LoginReturnActivityId</string>
    <string name="show_more_button_text">Show More Badges</string>
    <string name="show_less_button_text">Show Less Badges</string>

    <string name="APIDatePattern">yyyy-MM-dd</string>
    <string name="userId">user_id</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="ExaminationTypeName">Examination</string>
    <string name="logout">Logout</string>
    <string name="notificationKey">notificationKey</string>
    <!--offline files names-->
    <string name="sessions_filename">timetable_sessions</string>
    <string name="notifications_filename">timetable_notifications</string>
    <string name="network_connection_required">network connection is required to perform this action</string>
    <string name="selected_date">selected-date</string>
    <string name="selected_room">selected-room</string>
</resources>