<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Map card-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/activity_about_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Find Us"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/list_item_title" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|bottom"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/fragment_uclancy_distance_l1"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:gravity="end|top"
                            android:text="..."
                            android:textSize="26sp" />

                        <TextView
                            android:id="@+id/fragment_uclancy_distance_l2"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_alignBaseline="@id/fragment_uclancy_distance_l1"
                            android:layout_marginEnd="12dp"
                            android:layout_toEndOf="@id/fragment_uclancy_distance_l1"
                            android:gravity="top"
                            android:text="@string/Km"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/fragment_uclancy_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_margin="4dp"
                            android:layout_marginEnd="16dp"
                            android:layout_toEndOf="@id/fragment_uclancy_distance_l2"
                            android:text="@string/uclancy_address"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fragment_uclancy_address_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/fragment_uclancy_address"
                            android:layout_margin="4dp"
                            android:layout_marginEnd="16dp"
                            android:layout_toEndOf="@id/fragment_uclancy_distance_l2"
                            android:text="@string/uclancy_driving_instructions"
                            android:textStyle="italic" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/fragment_uclancy_navigate"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_navigation_black_24dp"
                            android:drawableStart="@drawable/ic_navigation_black_24dp"
                            android:drawableTint="@android:color/holo_blue_dark"
                            android:text="@string/Navigate" />

                    </LinearLayout>
                </LinearLayout>

                <fragment
                    android:id="@+id/activity_uclancy_map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/activity_about_details"
                    android:layout_alignParentTop="true" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!--contact us card-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact Us"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/list_item_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!--+357 24 69 40 00-->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:text="Reception"
                        android:textColor="@color/colorPrimaryText" />

                    <Button
                        android:id="@+id/fragment_uclancy_call"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:drawableStart="@drawable/ic_call_black_24dp"
                        android:drawableTint="@color/colorAccent"
                        android:paddingEnd="16dp"
                        android:text="@string/Call" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!--+357 24 694026-->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:text="Student Support"
                        android:textColor="@color/colorPrimaryText" />

                    <Button
                        android:id="@+id/fragment_uclancy_student_support_call"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="15dp"
                        android:drawableStart="@drawable/ic_call_black_24dp"
                        android:drawableTint="@color/colorAccent"
                        android:paddingEnd="16dp"
                        android:text="@string/Call" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:text="info@uclancyprus.ac.cy"
                        android:textColor="@color/colorPrimaryText" />

                    <Button
                        android:id="@+id/fragment_uclancy_email"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_communication_email"
                        android:drawableTint="@color/colorAccent"
                        android:text="@string/Email" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Social Media card-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Stay in touch"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/list_item_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/facebook_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_facebook_512"
                        android:text="Facebook" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:background="@color/light_gray" />

                    <Button
                        android:id="@+id/instagram_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_instagram_old_512"
                        android:text="Instagram" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:background="@color/light_gray" />

                    <Button
                        android:id="@+id/twitter_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_twitter_512"
                        android:text="Twitter" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>